fix: no more too big ranking icon in result image

--- a/Main/styles/quiz/_result_box.scss
+++ b/Main/styles/quiz/_result_box.scss
@@ -77,6 +77,9 @@
             }
             .comment {
                 color: gray;
+                .ranking-icon {
+                    height: 1em;
+                }
             }
         }
     }
